--- a/app/layout/test.html
+++ b/app/layout/test.html
@@ -1,12 +1,15 @@
 <div>
+    <h2>user: {{currentUser}}</h2>
+    <input type="text" ng-model="userName"/>
+    <input type="text" ng-model="password"/>
     <ul>
-        <li ng-click="login()"><a href="" > test login {{a}}</a></li>
-        <li><a href="">test logout </a></li>
+        <li ><a href="" ng-click="login()"> test login {{a}}</a></li>
+        <li><a href="" ng-click="logout()">test logout </a></li>
         <li ><a href="" ng-click="createUser()">test create user</a>
-            <input type="text" ng-model="username"/>
-            <input type="text" ng-model="password"/>
+
         </li>
-        <li><a href="">test update user</a></li>
-        <li><a href="">test delete user</a></li>
+        <li><a href="">update user</a></li>
+        <li><a href="">delete user</a></li>
+        <li><a href="" ng-click="getUsers()"> get user</a></li>
     </ul>
 </div>
