--- a/app/layout/state1.html
+++ b/app/layout/state1.html
@@ -1,4 +1,4 @@
 <div>
     <h1>Добро пожаловать в сервис !</h1>
-    <p>Для начала работы необходимо <a ui-sref="main.login">войти в систему</a>  или зарегистрироваться.</p>
+    <p>Для начала работы необходимо <a ui-sref="login">войти в систему</a>  или зарегистрироваться.</p>
 </div>
