--- a/app/layout/user.counts.count.html
+++ b/app/layout/user.counts.count.html
@@ -11,12 +11,12 @@
         </div>
 
         <div class="col-md-3" ng-show="!creating">
-            <button type="button" class="btn btn-default" ng-click="creating = true" > Добавить фирму </button>
+            <button type="button" class="btn btn-default" ng-click="creating = true" > Добавить оферту </button>
         </div>
 
         <div ng-show="creating">
             <div class="col-md-3">
-                <input type="text" class="form-control" placeholder="название фирмы" ng-model="name">
+                <input type="text" class="form-control" placeholder="номер оферты" ng-model="num">
             </div>
 
             <button type="button" class="btn btn-default dropdown-toggle" aria-expanded="false" ng-click="creating = false"> отмена </button>
@@ -28,16 +28,33 @@
 
     <table class="table table-condensed">
         <tr>
-            <th>#</th>
-            <th>Название</th>
-            <th>Дата создания</th>
-            <th>Управление</th>
+            <th style="min-width: 30px;">#</th>
+            <th style="min-width: 250px;">Номер оферты</th>
+            <th style="min-width: 250px;">Дата создания</th>
+            <th style="min-width: 250px;">Системный номер</th>
+            <th style="min-width: 250px;">Управление</th>
         </tr>
-        <tr ng-repeat="firm in firms| orderBy : '-created'">
-            <td>{{$index}}</td>
-            <td>{{firm.name}}</td>
-            <td>{{firm.created|date : 'dd.MM.yyyy'}}</td>
-            <td>{{firm.name}}</td>
+        <tr ng-repeat="count in counts| orderBy : '-created'">
+            <td>{{$index+1}}</td>
+            <td><span ng-show="!updating" ng-click="updating = true">{{count.num}}</span>
+                <div class="input-group" ng-show="updating">
+                    <input type="text" width="5" class="form-control" aria-describedby="basic-addon2"
+                           ng-model="count.num"
+                           >
+                    <span class="input-group-addon" id="basic-addon2"
+                          ng-click="update(count._id, count.num)"
+                            style="cursor: pointer">
+                        сохранить
+                    </span>
+                </div>
+                <!--<input type="text" class="form-control" placeholder="номер"-->
+                       <!--ng-model="num"-->
+                       <!--ng-show="updating"-->
+                       <!--ng-click="update(count._id, num)">-->
+            </td>
+            <td>{{count.created|date : 'dd.MM.yyyy'}}</td>
+            <td>{{count.sysNumber}}</td>
+            <td>{{count.name}}</td>
         </tr>
     </table>
 </div>
