--- a/app/layout/admin.firms.html
+++ b/app/layout/admin.firms.html
@@ -26,7 +26,7 @@
     <remove-filter></remove-filter>
 </div>
 
-<table class="table table-condensed">
+<table class="table table-hover">
     <tr>
         <th>#</th>
         <th>Название</th>
