--- a/app/layout/auth.registration.html
+++ b/app/layout/auth.registration.html
@@ -15,7 +15,7 @@
                     Sign in
                 </button>
                 <a href=""> напомнить пароль </a>
-                <a href="" class="pull-right need-help" ui-sref="main.login">авторизация </a><span class="clearfix"></span>
+                <a href="" class="pull-right need-help" ui-sref="login">авторизация </a><span class="clearfix"></span>
             </form>
         </div>
     </div>
