--- a/app/layout/admin.firms.html
+++ b/app/layout/admin.firms.html
@@ -2,7 +2,7 @@
     <div class="col-md-3" >
         <div class="input-group">
             <span class="input-group-addon">поиск</span>
-            <input type="text" class="form-control" id="inputGroupSuccess3" aria-describedby="inputGroupSuccess3Status">
+            <input type="text" class="form-control" id="inputGroupSuccess3" aria-describedby="inputGroupSuccess3Status" title="">
         </div>
     </div>
 
@@ -26,15 +26,17 @@
     <remove-filter></remove-filter>
 </div>
 
-<table class="table table-hover">
+<table class="table table-hover admin-firms">
     <tr>
-        <th>#</th>
-        <th>Название</th>
-        <th>Дата создания</th>
-        <th>Управление</th>
+        <th style="width: 3%">#</th>
+        <th style="width: 30%">Организация</th>
+        <th style="width: 20%">Дата создания</th>
+        <th style="width: 20%">начальный № оферты</th>
+        <th style="width: 20%">Управление</th>
     </tr>
     <tr ng-repeat="firm in filtered()| orderBy : '-created'">
         <td>{{$index}}</td>
+        <td><field-input value="firm.name"></field-input></td>
         <td>{{firm.name}}</td>
         <td>{{firm.created|date : 'dd.MM.yyyy'}}</td>
         <td>
