--- a/app/layout/admin.main.html
+++ b/app/layout/admin.main.html
@@ -7,7 +7,7 @@
             <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.users">Пользователи </a></li>
             <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.firms">Фирмы</a></li>
             <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.records">Данные</a></li>
-            <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.createToken">Создать пользователя</a></li>
+            <li role="presentation" ui-sref-active="active"><a href="" ui-sref="main.admin.createToken">Пригласить пользователя</a></li>
         </ul>
     </div>
 
