--- a/app/layout/auth.login.html
+++ b/app/layout/auth.login.html
@@ -14,7 +14,7 @@
                     Sign in
                 </button>
                 <a href=""> напомнить пароль </a>
-                <a href="#" class="pull-right need-help" ui-sref="main.registration">регистрация </a><span class="clearfix"></span>
+                <a href="#" class="pull-right need-help" ui-sref="registration">регистрация </a><span class="clearfix"></span>
             </form>
         </div>
     </div>
