--- a/app/layout/auth.registration.html
+++ b/app/layout/auth.registration.html
@@ -1,23 +1,47 @@
-<div><div class="row ng-scope">
-    <div class="col-sm-6 col-md-4 col-md-offset-4">
-        <h1 class="text-center login-title"> login page </h1>
-        <div class="account-wall">
-            <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
+<div>
+    <div class="row ng-scope">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
 
-            <form class="form-signin ng-scope ng-pristine ng-invalid ng-invalid-required">
+            <div ng-if="!err">
+                <h1 class="text-center login-title"> Регистрация для: {{token.username}} </h1>
 
-                <input type="text" ng-model="userName" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Email" required="" >
-                <input type="password" ng-model="password" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Password" required="" >
-                <input type="password" ng-model="checkPassword " class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="check password" required="" >
+            <div class="account-wall">
+                <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
 
-                <p class="text-center text-danger"> имя пользователя или пароль не верны ... </p>
-                <button class="btn btn-lg btn-primary btn-block" ng-click="login()" style="margin: 10px 0">
-                    Sign in
-                </button>
-                <a href=""> напомнить пароль </a>
-                <a href="" class="pull-right need-help" ui-sref="login">авторизация </a><span class="clearfix"></span>
-            </form>
+                <form class="form-signin ng-scope ng-pristine ng-invalid ng-invalid-required">
+
+                    <!--<input type="text" ng-model="userName" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Email" required="" >-->
+
+                    <input type="password" ng-model="password" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Password" >
+
+                    <input type="password" ng-model="confirmPassword " class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="check password" >
+
+                    <p class="text-center text-danger" ng-show="errMessage">{{errMessage}}</p>
+
+                    <button class="btn btn-lg btn-primary btn-block" ng-click="create(password, confirmPassword)" style="margin: 10px 0">
+                        Зарегистрироваться
+                    </button>
+
+                    <!--<a href=""> напомнить пароль </a>-->
+                    <a href="" class="pull-right need-help" ui-sref="login">авторизация </a><span class="clearfix"></span>
+
+                    {{password}}
+                </form>
+            </div>
+            </div>
+
+            <div ng-if="err == 1">
+                <h3>Ошибка:</h3>
+                <p>Ваш ключ регистрации истек или скомпрометирован.</p>
+                <p>Проверьте почту на предмет новых ссылок от администратора системы, или
+                    попросите администратора выслать новое приглашение.</p>
+            </div>
+
+            <div ng-if="err == 2">
+                <h3>Ошибка:</h3>
+                <p>По вашему ключу уже существует зарегистрированный пользователь.</p>
+            </div>
+
         </div>
     </div>
-
-</div></div>
+</div>
