--- a/app/layout/test.html
+++ b/app/layout/test.html
@@ -1,6 +1,6 @@
 <div>
-    <h2>user: {{userName}}</h2>
-    <input type="text" ng-model="userName"/>
+    <h2>user: {{username}}</h2>
+    <input type="text" ng-model="username"/>
     <input type="text" ng-model="password"/>
     <ul>
         <li ><a href="" ng-click="login()"> test login {{a}}</a></li>
