--- a/app/layout/admin.createToken.html
+++ b/app/layout/admin.createToken.html
@@ -7,8 +7,10 @@
     <div class="col-md-4">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="email" ng-model="email">
+            <input type="text" class="form-control" placeholder="автонумерация с ..." ng-model="startNum">
+            <button class="btn btn-default" type="button" ng-click="createToken(email, startNum)">Создать</button>
       <span class="input-group-btn">
-        <button class="btn btn-default" type="button" ng-click="createToken(email)">Создать</button>
+
       </span>
         </div>
     </div>
