--- a/app/layout/auth.login.html
+++ b/app/layout/auth.login.html
@@ -1,17 +1,17 @@
 <div><div class="row ng-scope">
     <div class="col-sm-6 col-md-4 col-md-offset-4">
-        <h1 class="text-center login-title"> login page </h1>
+        <h1 class="text-center login-title"> Авторизация: </h1>
         <div class="account-wall">
             <img class="profile-img" src="https://lh5.googleusercontent.com/-b0-k99FZlyE/AAAAAAAAAAI/AAAAAAAAAAA/eu7opA4byxI/photo.jpg?sz=120" alt="">
 
             <form class="form-signin ng-scope ng-pristine ng-invalid ng-invalid-required">
 
-                <input type="text" ng-model="userName" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Email" required="" >
+                <input type="text" ng-model="username" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Email" required="" >
                 <input type="password" ng-model="password" class="form-control ng-pristine ng-invalid ng-invalid-required" placeholder="Password" required="" >
 
                 <p class="text-center text-danger"> имя пользователя или пароль не верны ... </p>
                 <button class="btn btn-lg btn-primary btn-block" ng-click="login()" style="margin: 10px 0">
-                    Sign in
+                    авторизоваться
                 </button>
                 <a href=""> напомнить пароль </a>
                 <a href="#" class="pull-right need-help" ui-sref="registration">регистрация </a><span class="clearfix"></span>
