--- a/app/layout/admin.createToken.html
+++ b/app/layout/admin.createToken.html
@@ -4,17 +4,22 @@
     <p>На указанный почтовый адрес будет направлено письмо со ссылкой для регистрации</p>
     <p>Пароль для аккаунта и название контрагента укажет пользователь при переходе на отправленную ему ссылку </p>
     <p>Далее, назначтье пользователю доступные организации в разделе <a href="" ui-sref="main.admin.users">"организации"</a>. После этого данный пользователь сможет создавать фактуры.</p>
-    <div class="col-md-4">
-        <div class="input-group">
-            <input type="text" class="form-control" placeholder="email" ng-model="email">
-            <input type="text" class="form-control" placeholder="автонумерация с ..." ng-model="startNum">
-            <button class="btn btn-default" type="button" ng-click="createToken(email, startNum)">Создать</button>
-      <span class="input-group-btn">
 
-      </span>
-        </div>
+    <div class="col-md-4">
+
+        <input type="text" class="form-control" placeholder="email" ng-model="email">
+
+        <select ng-if="!!firms.length" ng-model="selectedFirm" class="form-control"
+                ng-options="firm as firm.name for firm in firms"> выберите фирму
+        </select>
+
+    </div>
+
+    <div class="col-md-4">
+        <button class="btn btn-default" type="button" ng-click="createToken(email, selectedFirm)">Создать</button>
     </div>
 </div>
+
 <div class="row">
     <h3>Список не верифицированных контрагентов.</h3>
     <table class="table table-hover">
@@ -29,9 +34,11 @@
         <tr ng-repeat="token in tokens | orderBy : '-created'">
             <td>{{$index+1}}</td>
             <td>{{token.username}}</td>
-            <td><a href="" ng-click="createToken(token.username)"><i class="fa fa-upload"></i></a></td>
+            <td>
+                <a href="" ng-click="createToken(token.username, {_id: token.firm})" title="Отправить приглашение заного">
+                <i class="fa fa-upload"></i></a>
+            </td>
         </tr>
         </tbody>
-
     </table>
 </div>
