--- a/app/layout/admin.createToken.html
+++ b/app/layout/admin.createToken.html
@@ -16,7 +16,9 @@
     </div>
 
     <div class="col-md-4">
-        <button class="btn btn-default" type="button" ng-click="createToken(email, selectedFirm)">Создать</button>
+        <button class="btn btn-default" type="button" ng-click="createToken(email, selectedFirm)">
+            Создать приглашение <i class="fa-li fa fa-spinner fa-spin" style="position: inherit" ng-show="progress"></i>
+        </button>
     </div>
 </div>
 
