--- a/app/layout/user.counts.count.html
+++ b/app/layout/user.counts.count.html
@@ -4,25 +4,26 @@
         <h2>фирма: {{firm.name}}</h2>
     </div>
     <div class="row" style="margin: 10px;">
-        <div class="col-md-3" >
-            <div class="input-group">
-                <span class="input-group-addon">поиск</span>
-                <input type="text" class="form-control" id="inputGroupSuccess3" aria-describedby="inputGroupSuccess3Status">
-            </div>
-        </div>
 
         <div class="col-md-3" ng-show="!creating">
-            <button type="button" class="btn btn-default" ng-click="creating = true" > Добавить оферту </button>
+            <button type="button" class="btn btn-default" ng-click="creating = true" > Добавить фактуру </button>
         </div>
 
         <div ng-show="creating">
-            <div class="col-md-3">
-                <input type="text" class="form-control" placeholder="сумма" ng-model="num">
-            </div>
 
-            <button type="button" class="btn btn-default dropdown-toggle" aria-expanded="false" ng-click="creating = false"> отмена </button>
-            <button type="button" class="btn btn-default dropdown-toggle" aria-expanded="false" ng-click="create()"> сохранить </button>
-
+            <form class="form-inline">
+                <div class="form-group">
+                    <div class="input-group">
+                        <div class="input-group-addon">Руб.</div>
+                        <input type="text" ng-model="amount" class="form-control" placeholder="Сумма">
+                        <div class="input-group-addon">
+                            <field-date object="dateNow" field="created"></field-date>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-default" ng-click="create()">Создать <i class="fa-li fa fa-spinner fa-spin" style="position: inherit" ng-show="progress"></i></button>
+                <button type="button" class="btn btn-default">Отмена</button>
+            </form>
         </div>
     </div>
 
@@ -31,33 +32,20 @@
         <tr>
             <th style="min-width: 30px;">#</th>
             <th style="min-width: 250px;">Контрагент</th>
-            <th style="min-width: 250px;">Дата создания</th>
+            <th style="min-width: 250px;">Дата</th>
             <th style="min-width: 250px;">Сумма</th>
             <th style="min-width: 250px;">№ оферты</th>
             <th style="min-width: 250px;">Управление</th>
         </tr>
-        <tr ng-repeat="count in counts| orderBy : '-created'">
+        <tr ng-repeat="count in counts">
             <td>{{$index+1}}</td>
-            <td><span ng-show="!updating" ng-click="updating = true">{{count.num}}</span>
-                <div class="input-group" ng-show="updating">
-                    <input type="text" width="5" class="form-control" aria-describedby="basic-addon2"
-                           ng-model="count.num"
-                           >
-                    <span class="input-group-addon" id="basic-addon2"
-                          ng-click="update(count._id, count.num)"
-                            style="cursor: pointer">
-                        сохранить
-                    </span>
-                </div>
-                <!--<input type="text" class="form-control" placeholder="номер"-->
-                       <!--ng-model="num"-->
-                       <!--ng-show="updating"-->
-                       <!--ng-click="update(count._id, num)">-->
+            <td>{{locals.user.contractor}}</td>
+            <td><field-date object="count" field="created" options="options"></field-date></td>
+            <td><field-input object="count" field="amount" options="options"></field-input></td>
+            <td>---</td>
+            <td>
+                <a href="" ng-click="remove(count)" ng-if="!count.sysNumber"><i class="fa fa-times"></i></a>
             </td>
-            <td>{{count.created|date : 'dd.MM.yyyy'}}</td>
-            <td>{{count.sysNumber}}</td>
-            <td>{{count.name}}</td>
-            <td></td>
         </tr>
     </table>
 </div>
