--- a/app/layout/main.html
+++ b/app/layout/main.html
@@ -16,7 +16,7 @@
                         </ul>
                     </li>
                     <li><a href="" ui-sref="main.admin.users" ng-if="locals.user && isSuperUser()">Администрирование</a></li>
-                    <li><a href="#contact">О программе</a></li>
+                    <li><a href="" ui-sref="main.about">О программе</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
