--- a/app/layout/admin.records.html
+++ b/app/layout/admin.records.html
@@ -26,8 +26,8 @@
     <tr ng-repeat="count in counts | orderBy : '-created' | fltRecByUser:filters.user | fltRecByFirm: filters.firm">
         <td>{{$index}}</td>
         <td>{{count.systemNum}}</td>
-        <td><field-date object="count" field="created" option="options"></field-date></td>
-        <td><field-input object="count" field="amount" option="options"></field-input></td>
+        <td><field-date object="count" field="created" options="options"></field-date></td>
+        <td><field-input object="count" field="amount" options="options"></field-input></td>
         <td>{{getUser(count.createdBy).contractor}}</td>
         <td>{{count.sysNumber}}</td>
     </tr>
