--- a/app/layout/main.html
+++ b/app/layout/main.html
@@ -8,7 +8,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" ng-if="locals.user && !isSuperUser()">Фирмы <span class="caret"></span></a>
+                        <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" ng-if="locals.user && !isSuperUser()">Фирмы <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="firm in firms">
                                 <a href="" ui-sref="main.counts.count({id: firm._id})">{{firm.name}}</a>
