--- a/app/layout/admin.users.html
+++ b/app/layout/admin.users.html
@@ -49,7 +49,10 @@
             <td>{{$index}}</td>
             <td>{{user.username}}</td>
             <td><field-input object='user' field="contractor" options="options"></field-input></td>
-            <td><field-firms user="user"></field-firms></td>
+            <td>
+                <!--<field-firms user="user"></field-firms>-->
+                <field-multi-select></field-multi-select>
+            </td>
             <td><field-date object="user" options="options" field="created"></field-date></td>
             <td class="management">
                 <span>
