--- a/app/layout/admin.users.html
+++ b/app/layout/admin.users.html
@@ -39,19 +39,19 @@
             <th>#</th>
             <th>Почта</th>
             <th>Контрагент</th>
-            <th>Доступ к организациям</th>
+            <th style="width: 40%">Доступ к организациям</th>
             <th>Дата</th>
             <th>Управление</th>
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="user in users | fltUsersByFirm : filters.firm">
+        <tr ng-repeat="user in users | orderBy: 'username' | fltUsersByFirm : filters.firm">
             <td>{{$index}}</td>
             <td>{{user.username}}</td>
             <td><field-input object='user' field="contractor" options="options"></field-input></td>
             <td>
                 <!--<field-firms user="user"></field-firms>-->
-                <field-multi-select select="firms" values="user.firms" display="name"></field-multi-select>
+                <field-multi-select select="firms" values="user.firms" display="name" id="{{user._id}}"></field-multi-select>
             </td>
             <td><field-date object="user" options="options" field="created"></field-date></td>
             <td class="management">
