admin can delete token and records

--- a/app/layout/admin.createToken.html
+++ b/app/layout/admin.createToken.html
@@ -39,6 +39,10 @@
             <td>
                 <a href="" ng-click="createToken(token.username, {_id: token.firm})" title="Отправить приглашение заного">
                 <i class="fa fa-upload"></i></a>
+                <a href="" title="удалить приглашение.
+Пользователь не сможет воспользоваться приглашением по ссылке">
+                    <i class="fa fa-times" ng-click="removeToken(token)"></i>
+                </a>
             </td>
         </tr>
         </tbody>
