--- a/app/layout/admin.records.html
+++ b/app/layout/admin.records.html
@@ -31,6 +31,6 @@
         <td><field-input object="count" field="amount" options="options"></field-input></td>
         <td>{{getUser(count.createdBy).contractor}}</td>
         <td>{{count.sysNumber}}</td>
-        <td><a href="" ng-click="remove(count, $index)"><i class="fa fa-times"></i></a></td>
+        <td><a href="" ng-click="remove(count)"><i class="fa fa-times"></i></a></td>
     </tr>
 </table>
